# elite-lucky-draw

./: README.md  package-lock.json  package.json
src/: index.html  lucky-draw-action.html  lucky-draw-not-full.html  lucky-draw-old-1.html  lucky-draw-old-2.html  lucky-draw-old-3.html  lucky-draw.html  register.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: db-config.js  ground.webm
